--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -4,143 +4,207 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#DFAEDDD0"
-    android:id="@+id/quiz"
+    android:background="@drawable/star"
+    android:id="@+id/rel"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="306dp"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/textView2"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginEnd="420dp"
-        android:layout_marginRight="420dp"
-        android:layout_marginBottom="-3dp"
-        android:textSize="20sp" />
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="163dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/quiz"
+        android:layout_width="606dp"
+        android:layout_height="360dp"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="172dp"
-        android:layout_marginLeft="172dp"
-        android:layout_marginBottom="230dp"
-        android:text="DD-MM-YYYY"
-        android:textAllCaps="false"
-        android:textColor="#2803FF"
-        android:textSize="24sp"
-        android:textStyle="bold" />
+        android:layout_marginStart="10dp"
+        android:layout_marginLeft="40dp"
+        android:layout_marginEnd="150dp"
+        android:layout_marginRight="40dp"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/styling_outer">
 
-    <RadioGroup
-        android:layout_width="345dp"
-        android:layout_height="172dp"
-        android:layout_alignBottom="@+id/textView"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_marginStart="54dp"
-        android:layout_marginLeft="54dp"
-        android:layout_marginEnd="-394dp"
-        android:layout_marginRight="-394dp"
-        android:layout_marginBottom="-210dp"
-        android:layout_toStartOf="@+id/textView"
-        android:layout_toLeftOf="@id/textView"
-        android:background="#B6B3B3">
+        <RadioGroup
+            android:id="@+id/radioGroup"
+            android:layout_width="316dp"
+            android:layout_height="221dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginBottom="16dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
 
-        <RadioButton
-            android:id="@+id/radioButton1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Day 1"
-            android:textSize="16sp"
-            app:buttonTint="#000000" />
+            <RadioButton
+                android:id="@+id/radioButton1"
+                android:layout_width="280dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="40dp"
+                android:background="@drawable/styling_option"
+                android:gravity="center"
+                android:textColor="#FAF8F8"
+                android:textSize="16sp"
+                app:buttonTint="#164CEF" />
 
-        <RadioButton
-            android:id="@+id/radioButton2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Day 2"
-            android:textSize="16sp"
-            app:buttonTint="#000000" />
+            <RadioButton
+                android:id="@+id/radioButton2"
+                android:layout_width="280dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="40dp"
+                android:background="@drawable/styling_option"
+                android:gravity="center"
+                android:textColor="#FAFAFA"
+                android:textSize="16sp"
+                app:buttonTint="#F44336" />
 
-        <RadioButton
-            android:id="@+id/radioButton3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Day 3"
-            android:textSize="16sp"
-            app:buttonTint="#000000" />
+            <RadioButton
+                android:id="@+id/radioButton3"
+                android:layout_width="280dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="40dp"
+                android:background="@drawable/styling_option"
+                android:gravity="center"
+                android:textColor="#FDFCFC"
+                android:textSize="16sp"
+                app:buttonTint="#4CAF50" />
 
-        <RadioButton
-            android:id="@+id/radioButton4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Day 4"
-            android:textSize="16sp"
-            app:buttonTint="#000000" />
-    </RadioGroup>
+            <RadioButton
+                android:id="@+id/radioButton4"
+                android:layout_width="280dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="40dp"
+                android:background="@drawable/styling_option"
+                android:gravity="center"
+                android:textColor="#FFFCFC"
+                android:textSize="16sp"
+                app:buttonTint="#FFEB3B" />
+        </RadioGroup>
 
-    <TextView
-        android:id="@+id/instruct"
-        android:layout_width="377dp"
-        android:layout_height="157dp"
-        android:layout_above="@+id/textView"
-        android:layout_alignEnd="@+id/textView"
-        android:layout_alignRight="@+id/textView"
-        android:layout_marginEnd="-82dp"
-        android:layout_marginRight="-82dp"
-        android:layout_marginBottom="111dp"
-        android:fontFamily="cursive"
-        android:text=" "
-        android:textSize="20sp" />
+        <LinearLayout
+            android:id="@+id/linearLayout"
+            android:layout_width="607dp"
+            android:layout_height="106dp"
+            android:layout_marginBottom="16dp"
+            android:background="@drawable/styling_landquestion"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toTopOf="@+id/radioGroup"
+            app:layout_constraintEnd_toEndOf="@+id/quiz"
+            app:layout_constraintHorizontal_bias="0.125"
+            app:layout_constraintStart_toStartOf="@+id/quiz"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1.0">
 
-    <TextView
-        android:id="@+id/total"
-        android:layout_width="166dp"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/textView"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginEnd="13dp"
-        android:layout_marginRight="13dp"
-        android:layout_marginBottom="-103dp"
-        android:background="#0B0A0A"
-        android:textColor="#FAFAFA"
-        android:textSize="34sp" />
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="439dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="70dp"
+                android:layout_marginTop="30dp"
+                android:textColor="#FAF8F8"
+                android:textSize="20dp" />
 
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="283dp"
-        android:layout_height="32dp"
-        android:layout_above="@+id/textView2"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginEnd="441dp"
-        android:layout_marginRight="441dp"
-        android:layout_marginBottom="23dp"
-        android:text="Choose the correct option"
-        android:textColor="#000000"
-        android:textSize="20sp"
-        android:textStyle="bold|italic" />
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="494dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="50dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="-61dp"
+                android:fontFamily="@font/petrona"
+                android:gravity="center"
+                android:text="DD-MM-YYYY"
+                android:textAllCaps="false"
+                android:textColor=" #e6ffe6"
+                android:textSize="24sp"
+                android:textStyle="bold"
+                tools:ignore="MissingConstraints" />
+
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginEnd="528dp"
+                android:layout_marginRight="528dp"
+                android:layout_marginBottom="360dp"
+                android:background="@drawable/styling_questionno"
+                android:fontFamily="@font/petrona"
+                android:gravity="center"
+                android:layout_marginLeft="15dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="-5dp"
+                android:text="1"
+                android:textColor="@color/black"
+                android:textSize="24sp"
+                android:textStyle="bold" />
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/total"
+            android:layout_width="223dp"
+            android:layout_height="245dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginLeft="12dp"
+            android:background="@drawable/stlyling_land"
+            android:fontFamily="@font/petrona"
+            android:gravity="center"
+            android:textColor="@color/white"
+            android:textSize="30sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toEndOf="@+id/radioGroup"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
         android:id="@+id/finalscore"
-        android:layout_width="207dp"
-        android:layout_height="100dp"
+        android:layout_width="wrap_content"
+        android:layout_height="226dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="1dp"
-        android:layout_marginRight="1dp"
-        android:layout_marginBottom="66dp"
+        android:layout_marginStart="626dp"
+        android:layout_marginLeft="626dp"
+        android:layout_marginEnd="17dp"
+        android:layout_marginRight="17dp"
+        android:layout_marginBottom="137dp"
         android:autoText="false"
+        android:background="#F8F5F5"
+        android:gravity="center_vertical"
         android:shadowColor="#2CF40B"
-        android:textColor="#77F803"
-        android:textSize="20sp" />
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:visibility="invisible" />
+
+    <TextView
+        android:id="@+id/timer"
+        android:layout_width="71dp"
+        android:layout_height="101dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="630dp"
+        android:layout_marginLeft="630dp"
+        android:layout_marginEnd="31dp"
+        android:layout_marginRight="31dp"
+        android:layout_marginBottom="20dp"
+        android:textSize="20sp"
+        android:textColor="@color/white"
+        android:text="00:00" />
 
 </RelativeLayout>
 
