--- a/app/src/main/res/drawable/styling_back.xml
+++ b/app/src/main/res/drawable/styling_back.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <size android:height="46dp"></size>
-    <stroke android:width="4dp" android:color="#f20505">
+    <stroke android:width="4dp" android:color="#ffffff">
     </stroke>
-    <solid android:color="#f50717"></solid>
     <corners android:radius="30dp" ></corners>
 </shape>
