--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,126 +7,42 @@
     android:background="@drawable/star"
     android:id="@+id/rel"
     tools:context=".MainActivity">
-
-    <TextView
-        android:id="@+id/total"
-        android:layout_width="166dp"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/textView4"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/quiz"
+        android:layout_width="302dp"
+        android:layout_height="510dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_marginStart="244dp"
-        android:layout_marginLeft="244dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginRight="1dp"
-        android:layout_marginBottom="-2dp"
-        android:gravity="center_horizontal"
-        android:textColor="#FAFAFA"
-        android:textSize="30sp"
-        android:textStyle="bold" />
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/quiz"
-        android:layout_width="match_parent"
-        android:layout_height="500dp"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="40dp"
         android:layout_marginLeft="40dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginRight="40dp"
-        android:layout_marginBottom="155dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="69dp"
+        android:layout_marginRight="69dp"
+        android:layout_marginBottom="74dp"
         android:background="@drawable/styling_outer">
-
-        <RadioGroup
-            android:id="@+id/radioGroup"
-            android:layout_width="300dp"
-            android:layout_height="229dp"
-            android:layout_marginStart="12dp"
-            android:layout_marginLeft="12dp"
-            android:layout_marginBottom="92dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
-
-            <RadioButton
-                android:id="@+id/radioButton1"
-                android:layout_width="251dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="40dp"
-                android:background="@drawable/styling_option"
-                android:gravity="center"
-                android:textColor="#FAF8F8"
-                android:textSize="16sp"
-                app:buttonTint="#164CEF" />
-
-            <RadioButton
-                android:id="@+id/radioButton2"
-                android:layout_width="251dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginRight="40dp"
-                android:background="@drawable/styling_option"
-                android:gravity="center"
-                android:textColor="#FAFAFA"
-                android:textSize="16sp"
-                app:buttonTint="#F44336" />
-
-            <RadioButton
-                android:id="@+id/radioButton3"
-                android:layout_width="251dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginRight="40dp"
-                android:background="@drawable/styling_option"
-                android:gravity="center"
-                android:textColor="#FDFCFC"
-                android:textSize="16sp"
-                app:buttonTint="#4CAF50" />
-
-            <RadioButton
-                android:id="@+id/radioButton4"
-                android:layout_width="251dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginRight="40dp"
-                android:background="@drawable/styling_option"
-                android:gravity="center"
-                android:textColor="#FFFCFC"
-                android:textSize="16sp"
-                app:buttonTint="#FFEB3B" />
-        </RadioGroup>
-
         <LinearLayout
+            android:id="@+id/question"
             android:layout_width="315dp"
             android:layout_height="128dp"
-            android:layout_marginBottom="16dp"
-            android:background="@drawable/styling_question"
             android:orientation="vertical"
-            app:layout_constraintBottom_toTopOf="@+id/radioGroup"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.444"
+            app:layout_constraintHorizontal_bias="0.461"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.02">
-
+            app:layout_constraintTop_toTopOf="parent">
             <TextView
                 android:id="@+id/textView"
                 android:layout_width="260dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="30dp"
+                android:gravity="center"
+                android:text="Round-1"
                 android:textColor="#FAF8F8"
-                android:textSize="20dp" />
-
+                android:textSize="30dp"
+                android:textStyle="italic" />
             <TextView
                 android:id="@+id/textView2"
                 android:layout_width="208dp"
@@ -135,78 +51,170 @@
                 android:layout_marginLeft="50dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="-61dp"
+                android:fontFamily="@font/petrona"
                 android:gravity="center"
                 android:text="DD-MM-YYYY"
                 android:textAllCaps="false"
                 android:textColor=" #e6ffe6"
-                android:fontFamily="@font/petrona"
                 android:textSize="24sp"
                 android:textStyle="bold"
                 tools:ignore="MissingConstraints" />
-
         </LinearLayout>
-
+        <Button
+            android:id="@+id/radioButton1"
+            android:layout_width="251dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginBottom="24dp"
+            android:background="@drawable/styling_option"
+            android:gravity="center"
+            android:textColor="#FAF8F8"
+            android:textSize="16sp"
+            app:buttonTint="#164CEF"
+            app:layout_constraintBottom_toTopOf="@+id/radioButton2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.509"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/question"
+            app:layout_constraintVertical_bias="1.0" />
+        <Button
+            android:id="@+id/radioButton2"
+            android:layout_width="251dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginBottom="24dp"
+            android:background="@drawable/styling_option"
+            android:gravity="center"
+            android:textColor="#FAFAFA"
+            android:textSize="16sp"
+            app:buttonTint="#F44336"
+            app:layout_constraintBottom_toTopOf="@+id/radioButton3"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.509"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/question"
+            app:layout_constraintVertical_bias="0.991" />
+        <Button
+            android:id="@+id/radioButton4"
+            android:layout_width="251dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginBottom="60dp"
+            android:background="@drawable/styling_option"
+            android:gravity="center"
+            android:textColor="#FFFCFC"
+            android:textSize="16sp"
+            app:buttonTint="#FFEB3B"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.509"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/question"
+            app:layout_constraintVertical_bias="0.963" />
+        <Button
+            android:id="@+id/radioButton3"
+            android:layout_width="251dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginTop="198dp"
+            android:layout_marginBottom="28dp"
+            android:background="@drawable/styling_option"
+            android:gravity="center"
+            android:textColor="#FDFCFC"
+            android:textSize="16sp"
+            app:buttonTint="#4CAF50"
+            app:layout_constraintBottom_toTopOf="@+id/radioButton4"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.509"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/question"
+            app:layout_constraintVertical_bias="1.0" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <TextView
-        android:id="@+id/finalscore"
-        android:layout_width="288dp"
-        android:layout_height="73dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="67dp"
-        android:layout_marginLeft="67dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginEnd="56dp"
-        android:layout_marginRight="56dp"
-        android:layout_marginBottom="28dp"
-        android:autoText="false"
-        android:background="#F8F5F5"
-        android:gravity="center_vertical"
-        android:shadowColor="#2CF40B"
-        android:textAlignment="center"
-        android:textColor="#77F803"
-        android:textSize="34sp"
-        android:textStyle="bold"
-        android:visibility="invisible" />
-
-
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="56dp"
-        android:layout_height="47dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="170dp"
-        android:layout_marginRight="169dp"
-        android:layout_marginBottom="630dp"
-        android:background="@drawable/styling_questionno"
-        android:fontFamily="@font/petrona"
-        android:gravity="center"
-        android:text="1"
-        android:textColor="@color/black"
-        android:textSize="24sp"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/timer"
-        android:layout_width="180dp"
-        android:layout_height="40dp"
-        android:layout_above="@+id/textView4"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_marginStart="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginBottom="-1dp"
-        android:textColor="@color/white"
-        android:textSize="25dp"
-        android:gravity="center_horizontal"
-        android:text="00:00" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="137dp"
+        android:layout_above="@+id/quiz"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="2dp"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/styling_scorecard">
+        <TextView
+            android:id="@+id/lives"
+            android:layout_width="136dp"
+            android:layout_height="41dp"
+            android:layout_above="@+id/textView4"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:fontFamily="@font/petrona"
+            android:gravity="center"
+            android:textColor="#F60B0B"
+            android:textSize="29sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.941"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/total"
+            app:layout_constraintVertical_bias="0.066" />
+        <TextView
+            android:id="@+id/timer"
+            android:layout_width="134dp"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/textView4"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:layout_marginBottom="32dp"
+            android:gravity="center_horizontal"
+            android:text="00:00"
+            android:textColor="@color/white"
+            android:textSize="25dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/lives"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/total"
+            app:layout_constraintVertical_bias="0.2" />
+        <TextView
+            android:id="@+id/total"
+            android:layout_width="166dp"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/textView4"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:gravity="center_horizontal"
+            android:textColor="#FAFAFA"
+            android:textSize="30sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.436"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.164" />
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="56dp"
+            android:layout_height="47dp"
+            android:background="@drawable/styling_questionno"
+            android:fontFamily="@font/petrona"
+            android:gravity="center"
+            android:text="1"
+            android:textColor="@color/black"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.467"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/total"
+            app:layout_constraintVertical_bias="0.529" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </RelativeLayout>
 
